--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   copy_with_extension: ^11.0.0
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
 
@@ -57,6 +59,8 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   build_runner: ^2.10.4
   copy_with_extension_gen: ^11.0.0
+  mocktail: ^1.0.4
+
 
 
 # For information on the generic Dart part of this file, see the
